fix delete scrollbar in firefox

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -99,6 +99,8 @@ p {
 }
 
 body {
+  overflow: -moz-scrollbars-none;
+
   font-family: 'Roboto', sans-serif;
   color: #fff;
   font-size: 16px;
